--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div id="content-about-me-exp">
           <span>Опыт работы: </span>
-          <span>Собственные прокеты</span>
+          <span>Собственные проекты</span>
         </div>
       </div>
     </div>
