--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p style="font-weight:550">Контакты</p>
         <div id="content-about-contact-telegram">
           <img id="content-about-contact-telegram-icon" src="https://img.icons8.com/?size=512&id=lUktdBVdL4Kb&format=png"/>
-          <span><a href ="t.me/hyperboreanvillager">t.me/hyperboreanvillager</a></span>
+          <span><a href ="https://t.me/hyperboreanvillager">t.me/hyperboreanvillager</a></span>
         </div>
         <div id="content-about-contact-email">
           <img id="content-about-contact-email-icon" src="https://img.icons8.com/?size=512&id=53435&format=png"/>
@@ -28,7 +28,7 @@
         </div>
         <div id="content-about-contact-github">
           <img id="content-about-contact-github-icon" src="https://img.icons8.com/?size=512&id=12599&format=png"/>
-          <span><a href="github.com/vladislavean">github.com/vladislavean</a></span>
+          <span><a href="https://github.com/vladislavean">github.com/vladislavean</a></span>
         </div>
         <div id="content-about-contact-phone">
           <img id="content-about-contact-phone-icon" src="https://img.icons8.com/?size=512&id=9730&format=png"/>
