--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 </head>
-<link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='style.css') }}" />
+<link rel="stylesheet" type="text/css" href= "style.css" />
 <body>
   <div id="content">
     <div id="container-info-name">
